# nn-from-scratch

./: .gitignore  LICENSE  README.md  classification.py  pyproject.toml
notebooks/: 01-02-backprob-manually.ipynb  01-03-micrograd.ipynb  01-04-micrograd-more-functions.ipynb  01-05-micrograd-mlp.ipynb
notebooks/01-backpropagation/: 01-01-derivatives.ipynb  01-05-micrograd-mlp.ipynb
notebooks/02-optimization/: 02-01-optimizers-momentum.ipynb
src/: Engine.py  nn.py  optimizer.py
