[project]
name = "nn-from-scratch"
version = "0.1.0"
description = "A simple neural network from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
]

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "COM"  # flake8-commas
]